# ITK-Transformer-NLP

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
itk_transformer_nlp/: download_dataset.py  encoder_cola.py  gpt2_summarization.py  transformer_qa.py
materials/lesson1/: Transformer_intro.ipynb
materials/lesson2/: Encoders.ipynb  Lab2.ipynb
tests/: test_encoder_cola.py  test_transformer_qa.py
